Bar Graph and minor bug fixes

--- a/index.html
+++ b/index.html
@@ -3,16 +3,38 @@
    <head>
    <!--[if IE]><script src="excanvas.js"></script><![endif]-->
       <style>
-         .vertical-heading{
-            text-transform: rotate (-90deg);
-         }
+      *
+      {
+         margin:0 auto;
+         padding:0px;
+      }
       </style>
       
    </head>
    <body>
 
       <div id="mycanvas" width="100%" height="100%"></div>
-   <script src="graph.js"></script>
-         
+      <script src="graph.js">
+      </script>
+      <script type="text/javascript">
+         var arr = {text1:1800,text2:300,text3:1200,text4:350,text5:400,text6:180,text7:200,text8:600, text9:250, text10:250, text11:300, text12: 400, text13:370, text14:220};
+         //Parameters: 1st-> arr, 2nd -> width of the bargraph(min 400, specify a greater width if number of elements in array are more),
+         //3rd -> height of the bargraph(min 400, specify a greater height if the difference between smallest and largest number is very large),
+         //4th -> number of rows
+         //5th -> to display the y-axis lines(vertical lines) - 0:do not display, 1: display
+         histoGram(arr,400,400,12,0);
+
+         //Parameters: 1st-> arr, 2nd -> width of the bargraph(min 400, specify a greater width if number of elements in array are more),
+         //3rd -> height of the bargraph(min 400, specify a greater height if the difference between smallest and largest number is very large),
+         //4th -> number of rows
+         //5th -> to display the y-axis lines(vertical lines) - 0:do not display, 1: display
+         lineGraph(arr,400,400,12,0);
+
+         //Parameters: 1st-> arr, 2nd -> height of the bargraph(min 400, specify a greater height if number of elements in array are more),
+         //3rd -> width of the bargraph(min 400, specify a greater width if the difference between smallest and largest number is very large),
+         //4th -> number of columns.
+         //5th -> to display the y-axis lines(vertical lines) - 0:do not display, 1: display
+         barGraph(arr,400,400,12,0);
+      </script>   
    </body>
 </html>
